product storage done
