# rest/products.go
@@ -8,9 +8,10 @@ import (
 	"simple-service/models"
 	"simple-service/utils"
 	"simple-service/views"
+	"time"
 )
 
-type createProductParams struct {
+type productParams struct {
 	SKI         string `json:"ski" binding:"required"`
 	Name        string `json:"name" binding:"required"`
 	ProductType string `json:"product_type" binding:"required"`
@@ -24,14 +25,14 @@ type createProductParams struct {
 // @Description create new product in storage
 // @Accept  json
 // @Produce  json
-// @Param param body createProductParams true "product params"
+// @Param param body productParams true "product params"
 // @Success 200 {object} views.R
 // @Failure 400 {object} views.R
 // @Failure 422 {object} views.R
 // @Failure 500 {object} views.R
 // @Router /products [post]
 func (s *Server) createProduct(c *gin.Context) {
-	var req createProductParams
+	var req productParams
 
 	if err := c.ShouldBindJSON(&req); err != nil {
 		s.log.Error(err)
@@ -144,7 +145,7 @@ func (s *Server) readProducts(c *gin.Context) {
 // @Failure 500 {object} views.R
 // @Router /products/{type} [post]
 func (s *Server) readProductByType(c *gin.Context) {
-	productType := c.Query("type")
+	productType := c.Param("type")
 	if productType == "" {
 		s.log.Error("product type is missing")
 		s.reportError(c, http.StatusBadRequest, utils.RequestValidationErr, errors.New("product type is missing"))
@@ -173,10 +174,10 @@ func (s *Server) readProductByType(c *gin.Context) {
 // @Failure 500 {object} views.R
 // @Router /products/{ski} [get]
 func (s *Server) readProductBySKI(c *gin.Context) {
-	ski := c.Query("type")
+	ski := c.Param("ski")
 	if ski == "" {
-		s.log.Error("product type is missing")
-		s.reportError(c, http.StatusBadRequest, utils.RequestValidationErr, errors.New("product type is missing"))
+		s.log.Error("product ski is missing")
+		s.reportError(c, http.StatusBadRequest, utils.RequestValidationErr, errors.New("product ski is missing"))
 
 		return
 	}
@@ -192,18 +193,117 @@ func (s *Server) readProductBySKI(c *gin.Context) {
 	s.respond(c, product)
 }
 
+// readProductByID godoc
+// @Summary Read Product By ID
+// @Produce  json
+// @Param id path string true "product's id"
+// @Success 200 {object} views.R
+// @Failure 400 {object} views.R
+// @Failure 500 {object} views.R
+// @Router /products/{id} [get]
+func (s *Server) readProductByID(c *gin.Context) {
+	ID := c.Query("id")
+	if ID == "" {
+		s.log.Error("product id is missing")
+		s.reportError(c, http.StatusBadRequest, utils.RequestValidationErr, errors.New("product id is missing"))
+
+		return
+	}
+
+	product, err := s.storage.Product().ReadByID(ID)
+	if err != nil {
+		s.log.Error(err)
+		s.reportError(c, http.StatusInternalServerError, utils.StorageOperationErr, err)
+
+		return
+	}
+
+	s.respond(c, product)
+}
+
 // updateProduct godoc
-// @Summary Create new product
-// @Description create new product in storage
+// @Summary Update existing product
 // @Accept  json
 // @Produce  json
-// @Param param body createProductParams true "product params"
+// @Param id path string true "product's ID"
+// @Param param body productParams true "product params"
 // @Success 200 {object} views.R
 // @Failure 400 {object} views.R
 // @Failure 422 {object} views.R
 // @Failure 500 {object} views.R
 // @Router /products [put]
-//func (s *Server) updateProduct(c *gin.Context) {}
+func (s *Server) updateProduct(c *gin.Context) {
+	productID := c.Param("id")
+
+	if productID == "" {
+		s.log.Error("product ID is missing")
+		s.reportError(c, http.StatusBadRequest, utils.RequestValidationErr, errors.New("product ID is missing"))
+
+		return
+	}
+
+	var req productParams
+
+	err := c.ShouldBindJSON(&req)
+	if err != nil {
+		s.log.Error(err)
+		s.reportError(c, http.StatusBadRequest, utils.RequestValidationErr, err)
+
+		return
+	}
+
+	product, err := s.storage.Product().ReadByID(productID)
+	if err != nil {
+		s.log.Error(err)
+		s.reportError(c, http.StatusInternalServerError, utils.StorageOperationErr, err)
+
+		return
+	}
+
+	now := time.Now()
+
+	{
+		product.ProductType = req.ProductType
+		product.URI = req.URI
+		product.Name = req.Name
+		product.Description = req.Description
+		product.IsActive = req.IsActive
+		product.SKU = req.SKI
+		product.UpdatedAt = &now
+	}
+
+	s.log.Debug(fmt.Sprintf("New product model to pass to storage: %+v", product))
+
+	tx, err := s.storage.Tx()
+	if err != nil {
+		s.log.Error(err)
+		s.reportError(c, http.StatusUnprocessableEntity, utils.StorageTxErr, err)
+
+		return
+	}
+
+	defer func() { _ = tx.Rollback() }()
+
+	err = s.storage.Product().Update(tx, productID, product)
+	if err != nil {
+		s.log.Error(err)
+		s.reportError(c, http.StatusInternalServerError, utils.StorageOperationErr, err)
+
+		return
+	}
+
+	err = tx.Commit()
+	if err != nil {
+		s.log.Error(err)
+		s.reportError(c, http.StatusInternalServerError, utils.StorageTxErr, err)
+
+		return
+	}
+
+	s.log.Debug("Product created, transaction was successfully committed")
+
+	s.respond(c, product)
+}
 
 // deleteProduct godoc
 // @Summary Delete product
